Correction orthographe - exo réponse fréquentielle

--- a/content/chapitre1.tex
+++ b/content/chapitre1.tex
@@ -955,7 +955,7 @@ d'où $\phi=53^{\circ} $
 %--------------------------------------------
 
 \exercice{Réponse fréquentielle}
-On exciste un système linéaire du second ordre par un signal sinusoïdal $e(t)=e_0.\sin(\omega t)$ de fréquence $f=\frac{\omega}{2.\pi}$ variable de $0$ à $500Hz$. Pour $e_0=50mV$, on obtient la sortie $s(t)=s_0.sin(\omega t +\Phi)$ dont l'amplitude $s_0$ est donnée en fonction de la fréquence sur la courbe ci-dessous.
+On excite un système linéaire du second ordre par un signal sinusoïdal $e(t)=e_0.\sin(\omega t)$ de fréquence $f=\frac{\omega}{2.\pi}$ variable de $0$ à $500Hz$. Pour $e_0=50mV$, on obtient la sortie $s(t)=s_0.sin(\omega t +\Phi)$ dont l'amplitude $s_0$ est donnée en fonction de la fréquence sur la courbe ci-dessous.
 
 \begin{center}
 \includegraphics[scale=0.5]{png/graphe2nd.png}
